infrastructure/netbird/manifests/management-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbird-management-external
  namespace: netbird
spec:
  type: NodePort
  selector:
    app: netbird-management
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30444
      protocol: TCP
