infrastructure/netbird/manifests/dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbird-ingress
  namespace: netbird
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: netbird.torsteinbo.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: netbird-management
                port:
                  number: 80
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: netbird-management
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbird-dashboard
                port:
                  number: 80
